--- a/webpage/meowForFamily/basic.html
+++ b/webpage/meowForFamily/basic.html
@@ -9,7 +9,8 @@
     <body style="background-color: #fbf8f3;">
 
         <nav class = "navbar navbar-dark bg-dark navbar-fixed-top" style="padding: 0.5rem 1rem; background-color: #847669 !important;">
-            <div style="width: 54px;"></div>
+            <div style="width: 54px;"></div> <!--排版用的div-->
+            
             <a class = "navbar-brank" style="color: #fff; text-decoration:none;;">
                 <strong style="font-size: 1.5em;">Meow</strong>
             </a>
