--- a/webpage/meowForFamily/historyAll.html
+++ b/webpage/meowForFamily/historyAll.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/webpage/css/history.css" type="text/css" />
+    <link rel="stylesheet" href="/css/history.css" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -69,6 +69,80 @@
     <!-- 中間區塊 -->
     <div class="container" style=" padding: 50px 100px 20px;">
         <h1>設備使用記錄</h1>
+        <div class="container" style=" padding: 50px 100px 20px;">
+            <h2 style="margin-bottom: 0;"><strong>置物櫃使用紀錄</strong></h2>
+            <div style="margin-bottom:1em; text-align: right;">
+        
+                <span><input id="date" type="date" style="height: 30px;"></span>
+                <select style="height: 30px; margin: 0 5px;">
+                    <option disabled selected hidden>選擇編號</option>
+                    <option>01</option>
+                    <option>02</option>
+                    <option>03</option>
+                    <option>04</option>
+                    <option>05</option>
+                    <option>06</option>
+                    <option>07</option>
+                    <option>08</option>
+                    <option>09</option>
+                    <option>10</option>
+                </select>
+                <a href="admin_lockerState.html">
+                    <input type="button" value="確認" />
+                </a>
+            </div>
+            <!-- 使用紀錄(表格) -->
+            <table class="table table-hover table-striped" style="margin-top: 2rem;">
+                <thead>
+                    <tr style="border-width: 1px">
+                        <th scope="col">#</th>
+                        <th scope="col">起始時間</th>
+                        <th scope="col">結束時間</th>
+                        <th scope="col">租借人</th>
+                        <th scope="col">租借費用</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- 第一筆 -->
+                    <tr>
+                        <th scope="row">01</th>
+                        <!--置物櫃編號-->
+                        <td style="max-width: 100px;">
+                            <a>2020/07/24 14:24:39</a>
+                        </td>
+                        <td class="text-truncate" style="max-width: 100px;">
+                            <a>2020/07/24 17:19:20</a>
+                        </td>
+                        <td>xxx</td>
+                        <td>20</td>
+                    </tr>
+                    <!-- 第二筆(示意) -->
+                    <tr>
+                        <th scope="row">07</th>
+                        <td class="text-truncate" style="max-width: 100px;">
+                            <a>2020/07/23 09:58:21</a>
+                        </td>
+                        <td class="text-truncate" style="max-width: 100px;">
+                            <a>2020/07/23 18:02:46</a>
+                        </td>
+                        <td>ooo</td>
+                        <td>50</td>
+                    </tr>
+                    <!-- 第三筆(示意) -->
+                    <tr>
+                        <th scope="row">03</th>
+                        <td class="text-truncate" style="max-width: 100px;">
+                            <a>2020/07/20 07:30:36</a>
+                        </td>
+                        <td class="text-truncate" style="max-width: 100px;">
+                            <a>2020/07/23 22:15:28</a>
+                        </td>
+                        <td>ooo</td>
+                        <td>200</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
     </div>
 
