--- a/webpage/meowForLockerAdmin/admin_failRecord.html
+++ b/webpage/meowForLockerAdmin/admin_failRecord.html
@@ -17,10 +17,10 @@
             </a>
             
             <div>
-                <a href = "#"><button class="btn btn-outline-light" type="submit">置物櫃狀態</button></a>
-                <a href = "#"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">使用紀錄</button></a>
-                <a href = "#"><button class="btn btn-outline-light" type="submit">失敗紀錄</button></a>
-                <a href = "#"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">故障紀錄</button></a>
+                <a href = "admin_lockerState.html"><button class="btn btn-outline-light" type="submit">置物櫃狀態</button></a>
+                <a href = "admin_lockerUsedRecord.html"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">使用紀錄</button></a>
+                <a href = "admin_failRecord.html"><button class="btn btn-outline-light grayLi" type="submit">失敗紀錄</button></a>
+                <a href = "admin_lockerBrokenRecord.html"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">故障紀錄</button></a>
                 <a href = "#"><button class="btn btn-outline-light" type="submit">使用說明</button></a>
             </div>
         </nav>
@@ -44,7 +44,7 @@
                     <option>09</option>
                     <option>10</option>
                 </select>
-                <a href = "admin_lockerState.html">
+                <a href = "#">
                     <input type="button" value="確認"/>
                 </a>
             </div>
@@ -61,26 +61,26 @@
                     <!-- 第一筆 -->
                     <tr>
                         <th scope="row">01</th> <!--置物櫃編號-->
-                        <td style = "max-width: 100px;">
-                            <a>2020/07/24 14:24:39</a>
+                        <td>2020/07/24 14:24:39</td>
+                        <td>
+                            <a href="admin_UserInfo.html">OxO</a>
                         </td>
-                        <td>xxx</td>
                     </tr>
                     <!-- 第二筆(示意) -->
                     <tr>
                         <th scope="row">07</th>
-                        <td style = "max-width: 100px;">
-                            <a>2020/07/23 09:58:21</a>
+                        <td>2020/07/23 09:58:21</td>
+                        <td>
+                            <a href="admin_UserInfo.html">aaabbb</a>
                         </td>
-                        <td>ooo</td>
                     </tr>
                     <!-- 第三筆(示意) -->
                     <tr>
                         <th scope="row">03</th>
-                        <td class = "text-truncate" style = "max-width: 100px;">
-                            <a>2020/07/20 07:30:36</a>
+                        <td>2020/07/20 07:30:36 </td>
+                        <td>
+                            <a href="admin_UserInfo.html">ouououo</a>
                         </td>
-                        <td>ooo</td>
                     </tr>
                 </tbody>
             </table>
