--- a/webpage/meowForLockerAdmin/admin_lockerManage.html
+++ b/webpage/meowForLockerAdmin/admin_lockerManage.html
@@ -17,10 +17,10 @@
             </a>
             
             <div>
-                <a href = "#"><button class="btn btn-outline-light" type="submit">置物櫃狀態</button></a>
-                <a href = "#"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">使用紀錄</button></a>
-                <a href = "#"><button class="btn btn-outline-light" type="submit">失敗紀錄</button></a>
-                <a href = "#"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">故障紀錄</button></a>
+                <a href = "admin_lockerState.html"><button class="btn btn-outline-light grayLi" type="submit">置物櫃狀態</button></a>
+                <a href = "admin_lockerUsedRecord.html"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">使用紀錄</button></a>
+                <a href = "admin_failRecord.html"><button class="btn btn-outline-light" type="submit">失敗紀錄</button></a>
+                <a href = "admin_lockerBrokenRecord.html"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">故障紀錄</button></a>
                 <a href = "#"><button class="btn btn-outline-light" type="submit">使用說明</button></a>
             </div>
         </nav>
