--- a/webpage/meowForLockerAdmin/admin_lockerBrokenRecord.html
+++ b/webpage/meowForLockerAdmin/admin_lockerBrokenRecord.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
-        <title>admin_lockerUsedRecord</title>
+        <title>admin_lockerBrokenRecord</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
@@ -18,16 +18,16 @@
             
             <div>
                 <a href = "admin_lockerState.html"><button class="btn btn-outline-light" type="submit">置物櫃狀態</button></a>
-                <a href = "admin_lockerUsedRecord.html"><button class="btn btn-outline-light grayLi" type="submit" style="margin: 0rem 0.5rem;">使用紀錄</button></a>
+                <a href = "admin_lockerUsedRecord.html"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">使用紀錄</button></a>
                 <a href = "admin_failRecord.html"><button class="btn btn-outline-light" type="submit">失敗紀錄</button></a>
-                <a href = "admin_lockerBrokenRecord.html"><button class="btn btn-outline-light" type="submit" style="margin: 0rem 0.5rem;">故障紀錄</button></a>
+                <a href = "admin_lockerBrokenRecord.html"><button class="btn btn-outline-light grayLi" type="submit" style="margin: 0rem 0.5rem;">故障紀錄</button></a>
                 <a href = "#"><button class="btn btn-outline-light" type="submit">使用說明</button></a>
             </div>
         </nav>
 
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
-            <h2 style="margin-bottom: 0;"><strong>置物櫃使用紀錄</strong></h2>
+            <h2 style="margin-bottom: 0;"><strong>故障紀錄</strong></h2>
             <div style="margin-bottom:1em; text-align: right;">
                 
                 <span><input id="date" type="date" style="height: 30px;"></span>
@@ -53,42 +53,39 @@
                 <thead>
                     <tr style="border-width: 1px">
                         <th scope="col">#</th>
-                        <th scope="col">起始時間</th>
-                        <th scope="col">結束時間</th>
-                        <th scope="col">租借人</th>
-                        <th scope="col">租借費用</th>
+                        <th scope="col">報修時間</th>
+                        <th scope="col">重啟時間</th>
+                        <th scope="col">狀態</th>
                     </tr>
                 </thead>
                 <tbody>
                     <!-- 第一筆 -->
                     <tr>
-                        <th scope="row">01</th> <!--置物櫃編號-->
+                        <th scope="row">04</th> <!--置物櫃編號-->
                         <td>2020/07/24 14:24:39</td>
-                        <td>2020/07/24 17:19:20</td>
-                        <td>
-                            <a href="admin_UserInfo.html">addgt000</a>
-                        </td>
-                        <td>20</td>
+                        <td> - </td>
+                        <td>-報修中-</td>
                     </tr>
                     <!-- 第二筆(示意) -->
                     <tr>
-                        <th scope="row">07</th>
+                        <th scope="row">01</th>
                         <td>2020/07/23 09:58:21</td>
-                        <td>2020/07/23 18:02:46</td>
-                        <td>
-                            <a href="admin_UserInfo.html">o OwO o</a>
-                        </td>
-                        <td>50</td>
+                        <td> - </td>
+                        <td>-報修中-</td>
                     </tr>
                     <!-- 第三筆(示意) -->
                     <tr>
-                        <th scope="row">03</th>
+                        <th scope="row">05</th>
                         <td>2020/07/20 07:30:36</td>
-                        <td>2020/07/23 22:15:28</td>
-                        <td>
-                            <a href="admin_UserInfo.html">ABCD</a>
-                        </td>
-                        <td>200</td>
+                        <td>2020/07/21 09:25:14</td>
+                        <td>-已修復-</td>
+                    </tr>
+                    <!-- 第四筆(示意) -->
+                    <tr>
+                        <th scope="row">10</th>
+                        <td>2020/06/14 15:20:33</td>
+                        <td>2020/06/17 09:28:42</td>
+                        <td>-已修復-</td>
                     </tr>
                 </tbody>
             </table>
