--- a/webpage/meowForFamily/historyFail.html
+++ b/webpage/meowForFamily/historyFail.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/info.css" type="text/css" />
+    <link rel="stylesheet" href="/css/history.css" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
     <meta charset="utf-8">
-    <title>Add new member</title>
+    <title>Fail History</title>
 </head>
 
 <body style="background-color: #fbf8f3;">
@@ -34,7 +34,7 @@
                 <li class="nav-item">
                     <a class="nav-link " href="#">歷史紀錄</a>
                 <li class = "rounded-top" style="background-color: #a09182"><a class="nav-link " href="historyAll.html">&nbsp;&nbsp;設備使用紀錄</a></li>
-                <li class = "rounded-bottom"style="background-color: #a09182"><a class="nav-link " href="historyFail.html">&nbsp;&nbsp;失敗紀錄</a></li>
+                <li class = "rounded-bottom" style="background-color: #a09182"><a class="nav-link " href="historyFail.html">&nbsp;&nbsp;失敗紀錄</a></li>
                 </li>
                 </li>
                 <li class="nav-item">
@@ -52,50 +52,58 @@
     </nav>
 
     <!-- 中間區塊 -->
-
     <div class="container" style=" padding: 50px 100px 20px;">
-        <h1>新增成員</h1>
-        <div class="info-basic">
-            <!-- 左半 -->
-            <div class="left">
-                <img src="/asset/oil.png" class="card-img-top" width="300">
-                <button type="button" class="btn btn-outline-light btn-lg" color: #847669>修改頭像</button>
-            </div>
+        <h1>失敗記錄</h1>
+        <div style="margin-bottom:1em; text-align: right;">
 
-            <div class="grayline"></div>
-
-            <!-- 右半 -->
-            <div class="right">
-                <h2 style="margin:0.5em 0em">暱稱</h2>
-
-                <div class="input-group" style="margin:1em 0em">
-                    <input type="text" class="form-control">
-                </div>
-
-                <div class="input-group " style="margin:1em 0em">
-                    <!-- <input type="text" class="form-control"> -->
-                    <div class="input-group-append" style="width:100%">
-                        <select class="btn btn-outline-secondary dropdown-toggle form-control">
-                            <option class="btn btn-outline-secondary dropdown-toggle form-control" disabled selected
-                                hidden>請選擇權限</option>
-                            <option class="btn btn-outline-secondary dropdown-toggle form-control" value="">最高權限
-                            </option>
-                            <option class="btn btn-outline-secondary dropdown-toggle form-control" value="">第二權限
-                            </option>
-                            <option class="btn btn-outline-secondary dropdown-toggle form-control" value="">限制對象
-                            </option>
-                        </select>
-                    </div>
-                </div>
-
-
-                <div class="function-button">
-                    <button type="button" class="btn btn-outline-light" color: #847669>確認新增</button>
-                </div>
-            </div>
-
-
+            <span><input id="date" type="date" style="height: 30px;"></span>
+            <a href="#">
+                <input type="button" value="確認" />
+            </a>
         </div>
+        <!-- 使用紀錄(表格) -->
+        <table class="table table-hover table-striped" style="margin-top: 2rem;">
+            <thead>
+                <tr style="border-width: 1px">
+                    <th scope="col">#</th>
+                    <th scope="col">家電名稱</th>
+                    <th scope="col">時間</th>
+                    <th scope="col">錄音播放</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- 第一筆 -->
+                <tr>
+                    <th scope="row">01</th>
+                    <td>烤派蒙</td>
+                    <td>2020/07/26 14:24:39</td>
+                    <td></td>
+                </tr>
+                <!-- 第二筆(示意) -->
+                <tr>
+                    <th scope="row">02</th>
+                    <td>煮派蒙</td>
+                    <td>2020/07/25 07:30:36</td>
+                    <td></td>
+                </tr>
+                <!-- 第三筆 -->
+                <tr>
+                    <th scope="row">03</th>
+                    <td>烤派蒙</td>
+                    <td>2020/07/24 17:19:20</td>
+                    <td></td>
+                </tr>
+                <!-- 第四筆(示意) -->
+                <tr>
+                    <th scope="row">04</th>
+                    <td>煮派蒙</td>
+                    <td>2020/07/23 22:15:28</td>
+                    <td></td>
+                </tr>
+
+            </tbody>
+        </table>
+
     </div>
 
 </body>
