--- a/webpage/meowForLockerUser/user_home.html
+++ b/webpage/meowForLockerUser/user_home.html
@@ -20,7 +20,7 @@
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
             <div>
-                <a href = "#">
+                <a href = "user_accountApply.html">
                     <button class="btn btn-set" type="submit">申請帳號</button>
                 </a>
             </div>
