--- a/webpage/meowForLockerUser/user_accountApply.html
+++ b/webpage/meowForLockerUser/user_accountApply.html
@@ -38,7 +38,7 @@
                 </div>
                 <p class="text-muted" style="margin-top: 1em; margin-bottom: 0;"><small>按下確認後開始錄音倒數<br>請於倒數結束後讀出提示詞，並確保口語清晰。</small></p>
                 <div>
-                    <a href = "#">
+                    <a href = "user_recordCountdown.html">
                         <button class="btn btn-outline-light btn-set" type="submit" style="margin-top:2em;">確認申請</button>
                     </a>
                 </div>
