--- a/webpage/meowForLockerUser/user_recordCountdown.html
+++ b/webpage/meowForLockerUser/user_recordCountdown.html
@@ -40,7 +40,7 @@
                 window.timer = window.setInterval(()=>{
                     if(countdown_value==0){
                         window.clearInterval(window.timer);
-                        window.location.href = "user_recording.html";
+                        // window.location.href = "user_recording.html";
                     }
                     timer_elem.innerText = countdown_value;
                     countdown_value -= 1;
