--- a/webpage/meowForLockerUser/user_applySuccess.html
+++ b/webpage/meowForLockerUser/user_applySuccess.html
@@ -7,7 +7,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         
         <meta charset = "utf-8">
-        <meta http-equiv="refresh" content="5; url=user_home.html"> 
+        <!-- <meta http-equiv="refresh" content="5; url=user_home.html">  -->
         <title>user_applySuccess</title>
     </head>
     <body style="background-color: #fbf8f3;">
@@ -22,6 +22,10 @@
 
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
+            <div>
+                <h2><strong>申請帳號</strong></h2>
+            </div>
+
             <div>
                 <div class="d-flex justify-content-center align-items-center" style="padding-top: 3em;">
                     <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
