--- a/webpage/meowForLockerUser/user_home.html
+++ b/webpage/meowForLockerUser/user_home.html
@@ -36,12 +36,14 @@
             </div>
             <div>
                 <a href = "#">
+                    <button class="btn btn-set" type="submit" style="margin-top:2em;">加值服務</button>
+                </a>
+            </div>
+            <div>
+                <a href = "#">
                     <button class="btn btn-set" type="submit" style="margin-top:2em;">使用說明</button>
                 </a>
             </div>
-            
         </div>
-
     </body>
-    
 </html>
