--- a/webpage/meowForLockerUser/user_recording.html
+++ b/webpage/meowForLockerUser/user_recording.html
@@ -21,7 +21,10 @@
         </nav>
 
         <!-- 中間區塊 -->
-        <div class = "container" style = " padding: 10px 100px 20px;">
+        <div class = "container" style = " padding: 50px 100px 20px;">
+            <div>
+                <h2><strong>申請帳號</strong></h2>
+            </div>
             <div class="loader">
                 <h1><span>
                     <small>錄音中</small>
