--- a/webpage/meowForLockerUser/user_addValue.html
+++ b/webpage/meowForLockerUser/user_addValue.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
-        <title>user_applyAccount</title>
+        <title>user_addValue</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
@@ -19,27 +19,32 @@
 
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
-            <h2><strong>申請帳號</strong></h2>
+            <h2><strong>加值</strong></h2>
 
             <div class = "text">
                 <div style="border: 1px #84766924 solid; background-color: #84766922;" >
                     <div class = "content">
                         <p>姓名</p>
-                        <input type="text" style="width: 18em;"/>
+                        <input type="text" style="width: 18em;" readonly placeholder="addgt000"/>
                         <p style="width: 5em;">行動電話</p>
-                        <input type="text" style="width: 18em;"/>
+                        <input type="text" style="width: 18em;" readonly placeholder="0912345678"/>
                     </div>
                     <div class = "content">
                         <p>餘額</p>
                         <input type="text" style="width: 18em;" readonly placeholder="0"/>
                         <p style="width: 5em;">身份證字號</p>
-                        <input type="text" style="width: 18em;"/>
+                        <input type="text" style="width: 18em;" readonly placeholder="A*****1234"/>
                     </div>
                 </div>
-                <p class="text-muted" style="margin-top: 1em; margin-bottom: 0;"><small>按下確認後開始錄音倒數<br>請於倒數結束後讀出提示詞，並確保口語清晰。</small></p>
+                <div style="border: 1px #84766924 solid; background-color: #84766922; margin-top: 1em;" >
+                    <div class = "content">
+                        <p>已投入金額</p>
+                        <input type="text" style="width: 18em;" readonly placeholder="100"/>
+                    </div>
+                </div>
                 <div>
-                    <a href = "user_applyAccount_recordCountdown.html">
-                        <button class="btn btn-outline-light btn-set" type="submit" style="margin-top:2em;">確認申請</button>
+                    <a href = "#">
+                        <button class="btn btn-outline-light btn-set" type="submit" style="margin-top:2em;">確認加值</button>
                     </a>
                 </div>
             </div>
