--- a/webpage/meowForLockerUser/user_addValue_success.html
+++ b/webpage/meowForLockerUser/user_addValue_success.html
@@ -9,7 +9,7 @@
         <meta charset = "utf-8">
         <!-- 倒數五秒自動跳轉 -->
         <!-- <meta http-equiv="refresh" content="5; url=user_home.html">  -->
-        <title>user_applyAccount_success</title>
+        <title>user_addValue_success</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
@@ -24,7 +24,7 @@
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
             <div>
-                <h2><strong>申請帳號</strong></h2>
+                <h2><strong>加值</strong></h2>
             </div>
 
             <div>
@@ -36,7 +36,7 @@
                     
                 </div>
                 <div>
-                    <p class ="signed">帳號申請成功</p>
+                    <p class ="signed">加值成功</p>
                 </div>
                 <div>
                     <h5 class="text-muted">5秒後自動跳轉...</h5>
