locker user applyAccount & addValue & verify

--- a/webpage/meowForLockerUser/user_addValue.html
+++ b/webpage/meowForLockerUser/user_addValue.html
@@ -43,8 +43,11 @@
                     </div>
                 </div>
                 <div>
-                    <a href = "#">
-                        <button class="btn btn-outline-light btn-set" type="submit" style="margin-top:2em;">確認加值</button>
+                    <a href = "user_homeMenu.html" style="color:#fbf8f3;">
+                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 2em 0 0;">取消加值</button>
+                    </a>
+                    <a href = "user_addValueSuccess.html" style="color:#fbf8f3;">
+                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 2em 0 0;">確認加值</button>
                     </a>
                 </div>
             </div>
