--- a/webpage/meowForLockerUser/user_addValueSuccess.html
+++ b/webpage/meowForLockerUser/user_addValueSuccess.html
@@ -8,8 +8,8 @@
         
         <meta charset = "utf-8">
         <!-- 倒數五秒自動跳轉 -->
-        <!-- <meta http-equiv="refresh" content="5; url=user_home.html">  -->
-        <title>user_addValue_success</title>
+        <meta http-equiv="refresh" content="3; url=user_homeMenu.html"> 
+        <title>user_addValueSuccess</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
@@ -39,7 +39,7 @@
                     <p class ="signed">加值成功</p>
                 </div>
                 <div>
-                    <h5 class="text-muted">5秒後自動跳轉...</h5>
+                    <h5 class="text-muted">3秒後自動跳轉...</h5>
                 </div>
             </div>       
         </div>
