--- a/webpage/meowForLockerUser/user_applyAccountRecording.html
+++ b/webpage/meowForLockerUser/user_applyAccountRecording.html
@@ -6,11 +6,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
-        
-        <!-- 如果要自動跳轉把註解拿掉 -->
-        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccount_recordCountdown.html">  -->
-        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccount_success.html"> -->
-        <title>user_applyAccount_verifyRecording</title>
+        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccountRecordCountdown.html">  -->
+        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccountSuccess.html"> -->
+        <title>user_applyAccountRecording</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
@@ -25,7 +23,7 @@
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
             <div>
-                <h2><strong>加值驗證</strong></h2>
+                <h2><strong>申請帳號</strong></h2>
             </div>
             <div class="loader">
                 <h1><span>
@@ -33,8 +31,8 @@
                 </span></h1>
             </div>
             <div>
-                <h5 class="text-muted">請讀出以下詞語</h5>
-                <h1>驗證</h1>
+                <h5 class="text-muted">請讀出以下詞語(1/9)</h5>
+                <h1>開門</h1>
             </div>
         </div>
 
