--- a/webpage/meowForLockerUser/user_applyAccountRecordCountdown.html
+++ b/webpage/meowForLockerUser/user_applyAccountRecordCountdown.html
@@ -6,12 +6,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
-        <title>user_addValue_keywordCountdown</title>
+        <title>user_applyAccountRecordCountdown</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
         <nav class = "navbar navbar-dark bg-dark navbar-fixed-top justify-content-center" style="padding: 0.5rem 1rem; background-color: #847669 !important;">
-            <a class = "navbar-brank" style="color: #fff; text-decoration:none;" href="user_home.html">
+            <a class = "navbar-brank" style="color: #fff; text-decoration:none;" href="user_basic.html">
                 <!--這邊要放我們的icon-->
                 <strong style="font-size: 1.5em;">Meow</strong>
             </a>
@@ -21,7 +21,7 @@
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px 100px;">
             <div>
-                <h2><strong>關鍵詞驗證</strong></h2>
+                <h2><strong>申請帳號</strong></h2>
             </div>
             <div class="loader">
                 <h1>
@@ -29,11 +29,9 @@
                 </h1>
             </div>
             <div>
-                <h4 class="text-muted">倒數結束後開始錄音...</h4>
-
-                <!-- 樓下這句話之後會改成圖片 -->
-                <h1>請說出您設置的關鍵詞</h1>
-
+                <h2>倒數結束後開始錄音...</h2>
+                <h5 class="text-muted">請讀出以下詞語(1/9)</h5>
+                <h1>開門</h1>
             </div>
         </div>
 
@@ -46,14 +44,13 @@
                     if(countdown_value==0){
                         window.clearInterval(window.timer);
                         // 如果要自動跳轉把註解拿掉
-                        // window.location.href = "user_applyAccount_recording.html";
+                        // window.location.href = "user_applyAccountRecording.html";
                     }
                     timer_elem.innerText = countdown_value;
                     countdown_value -= 1;
                 }, 1000);
             })();
         </script>
-
     </body>
     
 </html>
