--- a/webpage/meowForLockerUser/user_homeMenu.html
+++ b/webpage/meowForLockerUser/user_homeMenu.html
@@ -2,39 +2,38 @@
 <html>
     <head>
         <link rel="stylesheet" href="/css/lockerUser.css" type="text/css"/>
-        <link rel="stylesheet" href="/css/loader.css"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
-        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccount_recordCountdown.html">  -->
-        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccount_success.html"> -->
-        <title>user_applyAccount_recording</title>
+        <title>user_home</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
         <nav class = "navbar navbar-dark bg-dark navbar-fixed-top justify-content-center" style="padding: 0.5rem 1rem; background-color: #847669 !important;">
-            <a class = "navbar-brank" style="color: #fff; text-decoration:none;" href="user_basic.html">
+            <a class = "navbar-brank" style="color: #fff; text-decoration:none;" href="user_home.html">
                 <!--這邊要放我們的icon-->
                 <strong style="font-size: 1.5em;">Meow</strong>
             </a>
 
         </nav>
-
+        
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
             <div>
-                <h2><strong>申請帳號</strong></h2>
-            </div>
-            <div class="loader">
-                <h1><span>
-                    <small>錄音中</small>
-                </span></h1>
+                <a href = "#">
+                    <button class="btn btn-set" type="submit">修改帳號</button>
+                </a>
             </div>
             <div>
-                <h5 class="text-muted">請讀出以下詞語(1/9)</h5>
-                <h1>開門</h1>
+                <a href = "#">
+                    <button class="btn btn-set" type="submit" style="margin-top:2em;">刪除帳號</button>
+                </a>
+            </div>
+            <div>
+                <a href = "user_addValue.html">
+                    <button class="btn btn-set" type="submit" style="margin-top:2em;">加值服務</button>
+                </a>
             </div>
         </div>
-
     </body>
 </html>
