--- a/webpage/meowForLockerUser/user_verifyCountdown.html
+++ b/webpage/meowForLockerUser/user_verifyCountdown.html
@@ -6,7 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
-        <title>user_applyAccount_recordCountdown</title>
+        <title>user_verifyCountdown</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
@@ -21,7 +21,7 @@
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px 100px;">
             <div>
-                <h2><strong>申請帳號</strong></h2>
+                <h2><strong>身分驗證</strong></h2>
             </div>
             <div class="loader">
                 <h1>
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <h2>倒數結束後開始錄音...</h2>
-                <h5 class="text-muted">請讀出以下詞語(1/9)</h5>
-                <h1>開門</h1>
+                <h5 class="text-muted">請讀出以下詞語</h5>
+                <h1>驗證</h1>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
                     if(countdown_value==0){
                         window.clearInterval(window.timer);
                         // 如果要自動跳轉把註解拿掉
-                        // window.location.href = "user_applyAccount_recording.html";
+                        window.location.href = "user_verifyRecording.html";
                     }
                     timer_elem.innerText = countdown_value;
                     countdown_value -= 1;
