locker user modify & delete

--- a/webpage/meowForLockerUser/user_homeMenu.html
+++ b/webpage/meowForLockerUser/user_homeMenu.html
@@ -20,18 +20,23 @@
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
             <div>
-                <a href = "#">
+                <a href = "user_modifyAccount.html">
                     <button class="btn btn-set" type="submit">修改帳號</button>
                 </a>
             </div>
             <div>
-                <a href = "#">
+                <a href = "user_deleteAccount.html">
                     <button class="btn btn-set" type="submit" style="margin-top:2em;">刪除帳號</button>
                 </a>
             </div>
             <div>
                 <a href = "user_addValue.html">
                     <button class="btn btn-set" type="submit" style="margin-top:2em;">加值服務</button>
+                </a>
+            </div>
+            <div>
+                <a href = "user_home.html">
+                    <button class="btn btn-set" type="submit" style="margin-top:2em;">登出帳號</button>
                 </a>
             </div>
         </div>
