--- a/webpage/meowForLockerUser/user_deleteAccount.html
+++ b/webpage/meowForLockerUser/user_deleteAccount.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
-        <title>user_addValue</title>
+        <title>user_deleteAccount</title>
     </head>
     <body style="background-color: #fbf8f3;">
 
@@ -19,15 +19,15 @@
 
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
-            <h2><strong>加值</strong></h2>
+            <h2><strong>刪除帳號</strong></h2>
 
             <div class = "text">
                 <div style="border: 1px #84766924 solid; background-color: #84766922;" >
                     <div class = "content">
                         <p>姓名</p>
-                        <input type="text" style="width: 18em;" readonly placeholder="addgt000"/>
+                        <input type="text" style="width: 18em;" placeholder="addgt000"/>
                         <p style="width: 5em;">行動電話</p>
-                        <input type="text" style="width: 18em;" readonly placeholder="0912345678"/>
+                        <input type="text" style="width: 18em;" placeholder="0912345678"/>
                     </div>
                     <div class = "content">
                         <p>餘額</p>
@@ -36,18 +36,15 @@
                         <input type="text" style="width: 18em;" readonly placeholder="A*****1234"/>
                     </div>
                 </div>
-                <div style="border: 1px #84766924 solid; background-color: #84766922; margin-top: 1em;" >
-                    <div class = "content">
-                        <p>已投入金額</p>
-                        <input type="text" style="width: 18em;" readonly placeholder="100"/>
-                    </div>
+                <div style="margin-top: 2em;">
+                    <h4>確定要刪除此帳號？</h4>
                 </div>
                 <div>
                     <a href = "user_homeMenu.html" style="color:#fbf8f3;">
-                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 2em 0 0;">取消加值</button>
+                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 2em 0 0;">取消刪除</button>
                     </a>
-                    <a href = "user_addValueSuccess.html" style="color:#fbf8f3;">
-                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 0 0 2em;">確認加值</button>
+                    <a href = "user_deleteAccountSuccess.html" style="color:#fbf8f3;">
+                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 0 0 2em;">確認刪除</button>
                     </a>
                 </div>
             </div>
