--- a/webpage/meowForLockerUser/user_applyAccountSuccess.html
+++ b/webpage/meowForLockerUser/user_applyAccountSuccess.html
@@ -7,8 +7,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         
         <meta charset = "utf-8">
-        <!-- 倒數五秒自動跳轉 -->
-        <!-- <meta http-equiv="refresh" content="5; url=user_home.html">  -->
+        <!-- 倒數3秒自動跳轉 -->
+        <meta http-equiv="refresh" content="3; url=user_home.html"> 
         <title>user_applyAccountSuccess</title>
     </head>
     <body style="background-color: #fbf8f3;">
@@ -39,7 +39,7 @@
                     <p class ="signed">帳號申請成功</p>
                 </div>
                 <div>
-                    <h5 class="text-muted">5秒後自動跳轉...</h5>
+                    <h5 class="text-muted">3秒後自動跳轉...</h5>
                 </div>
             </div>       
         </div>
