--- a/webpage/meowForLockerUser/user_applyAccountRecording.html
+++ b/webpage/meowForLockerUser/user_applyAccountRecording.html
@@ -6,8 +6,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
+        
+        <!-- 如果要自動跳轉把註解拿掉 -->
         <!-- <meta http-equiv="refresh" content="3; url=user_applyAccountRecordCountdown.html">  -->
-        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccountSuccess.html"> -->
+        <meta http-equiv="refresh" content="3; url=user_applyAccountSuccess.html">
         <title>user_applyAccountRecording</title>
     </head>
     <body style="background-color: #fbf8f3;">
@@ -25,7 +27,7 @@
             <div>
                 <h2><strong>申請帳號</strong></h2>
             </div>
-            <div class="loader">
+            <div class="loader loaderGreen">
                 <h1><span>
                     <small>錄音中</small>
                 </span></h1>
