--- a/webpage/meowForLockerUser/user_keywordRecording.html
+++ b/webpage/meowForLockerUser/user_keywordRecording.html
@@ -26,7 +26,7 @@
             <div>
                 <h2><strong>關鍵詞驗證</strong></h2>
             </div>
-            <div class="loader">
+            <div class="loader loaderGreen">
                 <h1><span>
                     <small>錄音中</small>
                 </span></h1>
