--- a/webpage/meowForLockerUser/user_verifyCountdown.html
+++ b/webpage/meowForLockerUser/user_verifyCountdown.html
@@ -23,7 +23,7 @@
             <div>
                 <h2><strong>身分驗證</strong></h2>
             </div>
-            <div class="loader">
+            <div class="loader loaderBrown">
                 <h1>
                     <span id="timer"></span>
                 </h1>
