--- a/webpage/meowForFamily/memberAdd.html
+++ b/webpage/meowForFamily/memberAdd.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/info.css" type="text/css" />
+    <link rel="stylesheet" href="/css/familyinfo.css" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -90,7 +90,7 @@
 
 
                 <div class="function-button">
-                    <button type="button" class="btn btn-outline-light" color: #847669>確認新增</button>
+                    <button type="button" class="btn btn-outline-light" color: #847669 onclick="window.location.href='AddCountdown.html'">錄製聲音</button>
                 </div>
             </div>
 
