--- a/webpage/meowForFamily/memberList.html
+++ b/webpage/meowForFamily/memberList.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/list.css" type="text/css" />
+    <link rel="stylesheet" href="/css/familylist.css" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -90,7 +90,7 @@
             </div>
             <div class="card col">
                 <!-- <img src="/asset/oil.png" class="card-img-top" width="100"> -->
-                <a href="deviceModify.html">
+                <a href="memberAdd.html">
                     <img src="/asset/add.jpg" class="card-img-top">
                 </a>
                 <div class="card-body">
