--- a/webpage/meowForLockerUser/user_applyAccountRecordCountdown.html
+++ b/webpage/meowForLockerUser/user_applyAccountRecordCountdown.html
@@ -44,7 +44,7 @@
                     if(countdown_value==0){
                         window.clearInterval(window.timer);
                         // 如果要自動跳轉把註解拿掉
-                        window.location.href = "user_applyAccountRecording.html";
+                        // window.location.href = "user_applyAccountRecording.html";
                     }
                     timer_elem.innerText = countdown_value;
                     countdown_value -= 1;
