--- a/webpage/meowForLockerUser/user_applyAccountRecording.html
+++ b/webpage/meowForLockerUser/user_applyAccountRecording.html
@@ -8,8 +8,11 @@
         <meta charset = "utf-8">
         
         <!-- 如果要自動跳轉把註解拿掉 -->
+        <!-- 還沒錄完全部詞彙，繼續錄音倒數 -->
         <!-- <meta http-equiv="refresh" content="3; url=user_applyAccountRecordCountdown.html">  -->
-        <meta http-equiv="refresh" content="3; url=user_applyAccountSuccess.html">
+        <!--錄音結束跳到成功頁面-->
+        <!-- <meta http-equiv="refresh" content="3; url=user_applyAccountSuccess.html"> --> 
+        
         <title>user_applyAccountRecording</title>
     </head>
     <body style="background-color: #fbf8f3;">
