--- a/webpage/meowForLockerUser/user_modifyAccount.html
+++ b/webpage/meowForLockerUser/user_modifyAccount.html
@@ -36,6 +36,13 @@
                         <input type="text" style="width: 18em;" readonly placeholder="A*****1234"/>
                     </div>
                 </div>
+                <div style="border: 1px #84766924 solid; background-color: #84766922; margin-top: 1em;" >
+                    <div class = "content">
+                        <p>驗證關鍵詞<br><small>（此為登入時驗證身分使用，如最喜歡的動物、想去的國家，請務必填會記得的詞彙）</small></p>
+                        <input type="text" style="width: 18em;" placeholder="貓貓"/>
+                        <!-- keyword的字數限制再討論，目前暫定關鍵詞可修改 -->
+                    </div>
+                </div>
                 <div>
                     <a href = "user_homeMenu.html" style="color:#fbf8f3;">
                         <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 2em 0 0;">取消修改</button>
