--- a/webpage/meowForLockerUser/user_verifyCountdown.html
+++ b/webpage/meowForLockerUser/user_verifyCountdown.html
@@ -43,8 +43,9 @@
                 window.timer = window.setInterval(()=>{
                     if(countdown_value==0){
                         window.clearInterval(window.timer);
+                        
                         // 如果要自動跳轉把註解拿掉
-                        window.location.href = "user_verifyRecording.html";
+                        // window.location.href = "user_verifyRecording.html";
                     }
                     timer_elem.innerText = countdown_value;
                     countdown_value -= 1;
