--- a/webpage/meowForLockerUser/user_applyAccount.html
+++ b/webpage/meowForLockerUser/user_applyAccount.html
@@ -36,6 +36,13 @@
                         <input type="text" style="width: 18em;"/>
                     </div>
                 </div>
+                <div style="border: 1px #84766924 solid; background-color: #84766922; margin-top: 1em;" >
+                    <div class = "content">
+                        <p>驗證關鍵詞<br><small>（此為登入時驗證身分使用，如最喜歡的動物、想去的國家，請務必填會記得的詞彙）</small></p>
+                        <input type="text" style="width: 18em;" placeholder="限2至5個字"/>
+                        <!-- keyword的字數限制再討論 -->
+                    </div>
+                </div>
                 <p class="text-muted" style="margin-top: 1em; margin-bottom: 0;"><small>按下確認後開始錄音倒數<br>請於倒數結束後讀出提示詞，並確保口語清晰。</small></p>
                 <div>
                     <a href = "user_home.html" style="color:#fbf8f3;">
