--- a/webpage/meowForLockerUser/user_keywordRecording.html
+++ b/webpage/meowForLockerUser/user_keywordRecording.html
@@ -7,8 +7,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <meta charset = "utf-8">
         
-        <!-- 如果要自動跳轉把註解拿掉 -->
-        <meta http-equiv="refresh" content="3; url=user_verifySuccess.html">
+        <!-- 3秒後自動跳轉，如果要自動跳轉把註解拿掉 -->
+        <!-- <meta http-equiv="refresh" content="3; url=user_verifySuccess.html"> -->
+        
         <title>user_keywordRecording</title>
     </head>
     <body style="background-color: #fbf8f3;">
